--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,32 +4,88 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../styles/styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="./servicios.html">Servicios</a></li>
-          <li><a href="./productos.html">Productos</a></li>
-          <li><a href="./sobre-nosotros.html">Sobre nosotros</a></li>
-          <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
+      <nav
+        class="navbar navbar-expand-lg bg-body-tertiary"
+        style="
+          height: 4rem;
+          position: fixed;
+          top: 0;
+          left: 0;
+          right: 0;
+          z-index: 1030;
+        "
+      >
+        <div class="container-fluid position-relative">
+          <a
+            class="navbar-brand position-absolute start-0 top-50 translate-middle-y ps-3"
+            href="../index.html"
+          >
+            Gabriel Rossy Studio
+          </a>
+          <div
+            class="collapse navbar-collapse justify-content-center"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav flex-lg-row flex-column gap-4 mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="./servicios.html">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./sobre-nosotros.html"
+                  >Sobre nosotros</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./productos.html">Productos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
-    <main class="contacto">
-      <section>
-        <form action="" method="post">
-          <label for="nombre">Nombre</label>
-          <input type="text" name="nombre" id="nombre" />
-
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" />
-          
-          <label for="Consulta">Consulta</label>
-          <textarea name="Consulta" id="Consulta"></textarea>
+    <main>
+      <section class="contacto">
+        <form class="row g-3">
+          <div class="col-md-6">
+            <label for="name" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="name" />
+          </div>
+          <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">Email</label>
+            <input type="email" class="form-control" id="inputEmail4" />
+          </div>
+          </div>
+          <div class="col-md-4">
+            <label for="inputState" class="form-label">Tema</label>
+            <select id="inputState" class="form-select">
+              <option selected>Elegir...</option>
+              <option>Hardware</option>
+              <option>Software</option>
+              <option>Servicio técnico</option>
+              <option>Otro</option>
+            </select>
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">Consulta</span>
+            <textarea class="form-control" aria-label="With textarea"></textarea>
+          </div>
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </div>
         </form>
       </section>
     </main>
@@ -74,6 +130,10 @@
       </div>
       <p>© 2025 Gabriel Rossy Studio ™ – Todos los derechos reservados.</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
