adding sass config

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container-fluid position-relative">
           <a
             class="navbar-brand position-absolute start-0 top-50 translate-middle-y ps-3"
-            href="../index.html"
+            href="./index.html"
           >
             Gabriel Rossy Studio
           </a>
